--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
-rc/
+# IDE
 .idea/
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Build
+rc/
 out/
+
+# Enviroments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
